Fixed rollover z-index issue.

--- a/style/style.css
+++ b/style/style.css
@@ -1133,7 +1133,7 @@ footer a:active {
     text-align: center;
     text-decoration: none;
     width: 100%;
-    z-index: 10;
+    z-index: 2;
 }
 
 @media only screen 
